test/conformance/chainsaw/validate/clusterpolicy/standard/resource-cache/host-ingress/chainsaw-step-01-apply-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ingress-unique-host
spec:
  failurePolicy: Fail
  rules:
  - context:
    - name: requestIngressClass
      variable:
        jmesPath: request.object.metadata.annotations."kubernetes.io/ingress.class"
    - resourceCache:
        resource:
          group: networking.k8s.io
          version: v1
          kind: ingresses
          namespace: '{{ request.object.metadata.namespace }}'
        jmesPath: "[?metadata.name != '{{ request.object.metadata.name }}']"
      name: ingresses
    match:
      all:
      - resources:
          kinds:
          - Ingress
    name: unique-ingress-against-other-ingress-class
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      deny:
        conditions:
          any:
          - key: '{{ request.object.spec.rules[].host }}'
            operator: AnyIn
            value: '{{ingresses[?metadata.annotations."kubernetes.io/ingress.class"
              != ''{{ request.object.metadata.annotations."kubernetes.io/ingress.class"
              }}''].spec.rules[].host }}'
      message: |
        Ingress must have a unique hostname across different ingress classes
  validationFailureAction: Enforce
