test/conformance/chainsaw/validate/clusterpolicy/standard/resource-cache/host-ingress/chainsaw-step-01-apply-1-3.yaml
apiVersion: kyverno.io/v2alpha1
kind: CachedContextEntry
metadata:
  name: cachedingresses
spec:
  resource:
    group: networking.k8s.io
    version: v1
    kind: ingresses
    namespace: test-ingress
