test/conformance/chainsaw/validate/clusterpolicy/standard/resource-cache/host-ingress/chainsaw-step-01-apply-1-5.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: not-nginx
  name: my-app-ingress-bad
  namespace: test-ingress
spec:
  rules:
  - host: my-app.myorg.io
    http:
      paths:
      - backend:
          service:
            name: my-app-deployment
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
