test/conformance/chainsaw/validate/clusterpolicy/standard/resource-cache/host-ingress/chainsaw-step-01-assert-1-3.yaml
apiVersion: kyverno.io/v2alpha1
kind: CachedContextEntry
metadata:
  name: cachedingresses
