test/conformance/chainsaw/validate/clusterpolicy/standard/resource-cache/host-ingress/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: lazyload
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
    - apply:
        file: chainsaw-step-01-apply-1-4.yaml
    - assert:
        file: chainsaw-step-01-assert-1-1.yaml
    - assert:
        file: chainsaw-step-01-assert-1-2.yaml
    - assert:
        file: chainsaw-step-01-assert-1-3.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: chainsaw-step-01-apply-1-5.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: networking.k8s.io/v1
          kind: Ingress
          name: my-app-ingress
          namespace: test-ingress
  - name: check-metric
    try:
    - script:
        content: |
          if kubectl run curl -it --rm --image=curlimages/curl -- sh -c 'VALUE=$(curl -sk http://kyverno-svc-metrics.kyverno.svc:8000/metrics | awk '/^kyverno_cache_failed_external_api_calls / {print $2}'); [ "$VALUE" -eq 0 ]; exit $?'
          then
            echo "Test succeeded. Metric is equal thanto 0."
            exit 0
          else
            echo "Test failed. Metric is not equal to 0."
            exit 1
          fi
